sass/theme/_child_theme.scss
// Google Fonts
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700");

// Functions
@function color-contrast($color) {
	@if (lightness($color) > 50) {
		@return $gray-900;
	} @else {
		@return $gray-100;
	}
}
@function color-match($color) {
	@if (lightness($color) > 50) {
		@return $gray-200;
	} @else {
		@return $gray-800;
	}
}

// Utility classes
.text-shadow {
	text-shadow: $text-shadow;
}
.text-shadow-lg {
	text-shadow: $text-shadow-lg;
}

$utility-colors: (
	primary: $primary,
	secondary: $secondary,
	gray-100: $gray-100,
	gray-200: $gray-200,
	gray-900: $gray-900,
);
@each $name, $color in $utility-colors {
	.bg-#{$name} {
		background-color: $color;
		color: color-contrast($color);
		.witch-feature-container-image {
			border: 1px solid rgba(color-contrast($color), 0.4);
		}
	}
	.button-#{$name} {
		background-color: $color;
		color: color-contrast($color);
		&:hover {
			background-color: scale-color($color, $lightness: -20%);
			color: scale-color(color-contrast($color), $lightness: -20%);
		}
	}
}

// Global
h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: bold;
}

h1 {
	margin-bottom: $h1-mb;
}

// Header
#main-nav {
	// Retina nav-brand
	img {
		max-height: 50px;
		object-fit: contain;
		object-position: left;
		// Mobile fix (on same row)
		@include media-breakpoint-down(sm) {
			max-width: 50vw;
		}
	}

	#main-menu {
		& > li {
			padding-left: map-get($spacers, 1);
			padding-right: map-get($spacers, 1);
		}
		.menu-item .nav-link .emoji {
			vertical-align: -0.2em !important;
		}
	}
}

// Blocks
.hero-image {
	.carousel-item {
		height: 50vh;
		@media only screen and (max-height: 800px) {
			height: 70vh;
		}
		background: rgba($black, 0.2);
		&::before {
			content: "";
			z-index: -1;
			position: absolute;
			top: 0px;
			left: 0px;
			width: 100%;
			height: 100%;
			background: var(--hero-background-url) center / cover no-repeat;
			background-position-y: var(--hero-background-position);
		}
		& .carousel-caption {
			position: relative;
			top: 0px;
			right: 0px;
			left: 0px;
			right: 0px;
			color: #fff;
		}
		h1 {
			font-size: Min(4rem, calc(2.3rem + 1.5vw));
			margin-bottom: 0.5rem;
		}
		p {
			font-size: Min(2rem, calc(1rem + 0.5vh));
			letter-spacing: $letter-spacing-lg;
			font-weight: 300;
			margin-bottom: 1.5rem;
		}
		button {
			font-size: calc(0.75rem + 0.5vw);
		}
	}
}

.witch-feature-container {
	img {
		object-fit: cover;
	}
	button {
		margin-top: 0.5rem;
	}
	.witch-feature-title {
		margin-bottom: $h1-mb;
		margin-left: -1px;
	}
}

// Shopping cart number
#main-nav .fa.fa-shopping-cart:after {
	position: absolute;
	border-radius: 50%;
	margin-top: 10px;
	margin-left: -5px;
	width: 0.9rem;
	height: 0.9rem;
	background-color: #c7d5c7;
	color: $gray-800;
	font-family: $font-family-sans-serif;
	text-align: center;
	font-weight: bold;
	font-size: 0.75rem;
	line-height: 0.9rem;
}

